# kya-broker

./: .gitignore  LICENSE  README.md  SKILL.md  bootstrap.sh  install.sh  policy.default.yaml  pyproject.toml  uninstall.sh
docs/: architecture.md  migration.md  overview.md  playbook_authoring.md  troubleshooting.md  walkthrough.md
examples/: example_context.json  example_intent.json
playbooks/: anthropic_topup_card.yaml  openrouter_topup_card.yaml  openrouter_topup_crypto.yaml  vast_launch_gpu.yaml  vast_topup_card.yaml  vast_topup_crypto.yaml
prompts/: audit_claude.md  audit_codex.md  audit_system.md  chrome_agent.md
src/: __init__.py  broker.py  chrome_bridge.py  cli.py  config.py  email_lock.py  email_verifier.py  human_gate.py  intent.py  ledger.py  mcp_server.py  paths.py  popup_server.py  rail_selector.py  setup_wizard.py
src/auditor/: __init__.py  base.py  claude.py  codex.py  mock.py  runner.py
tests/: conftest.py  test_auditor.py  test_broker.py  test_config_merchants.py  test_email_lock.py  test_email_verifier.py  test_human_gate.py  test_intent.py  test_ledger.py  test_popup_server.py  test_rail_selector.py
