[project]
name = "kya-broker"
version = "1.1.0"
description = "Optional CLI companion to kya-pay SKILL.md — thin SQLite ledger + spending caps. The skill itself is just SKILL.md and needs no install."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "KYA Broker Contributors" },
]
keywords = ["claude-code", "skill", "payment", "agent", "browser"]
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
broker = "src.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
